[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/popups/age_rating/AgeRatingPopup.gd" type="Script" id=1]
[ext_resource path="res://scenes/popups/age_rating/AgeRatingPicker.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ratings/cero/Z.png" type="Texture" id=3]
[ext_resource path="res://assets/ratings/cero/D.png" type="Texture" id=4]
[ext_resource path="res://assets/ratings/pegi/18.png" type="Texture" id=5]
[ext_resource path="res://assets/ratings/cero/A.png" type="Texture" id=6]
[ext_resource path="res://assets/ratings/pegi/7.png" type="Texture" id=7]
[ext_resource path="res://assets/ratings/pegi/3.png" type="Texture" id=8]
[ext_resource path="res://assets/ratings/pegi/12.png" type="Texture" id=9]
[ext_resource path="res://assets/ratings/cero/B.png" type="Texture" id=10]
[ext_resource path="res://assets/ratings/cero/C.png" type="Texture" id=11]
[ext_resource path="res://assets/ratings/pegi/16.png" type="Texture" id=12]
[ext_resource path="res://assets/ratings/cero/unknown.png" type="Texture" id=13]
[ext_resource path="res://assets/ratings/pegi/unknown.png" type="Texture" id=14]
[ext_resource path="res://source/utils/SpinBoxHandler.gd" type="Script" id=15]

[node name="AgeRatingPopup" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1008.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 930.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Specify a minimum age required:"

[node name="MinAge" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 934.0
margin_right = 1008.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../../HBoxContainer3/Ok")
focus_neighbour_bottom = NodePath("../../ESRB")
min_value = 3.0
max_value = 18.0
value = 3.0
rounded = true

[node name="SpinBoxHandler" type="Control" parent="VBoxContainer/HBoxContainer/MinAge"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 15 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1008.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer2"]
margin_right = 493.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 497.0
margin_right = 510.0
margin_bottom = 14.0
text = "or"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer2"]
margin_left = 514.0
margin_right = 1008.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 1008.0
margin_bottom = 60.0
text = "Manually change values per rating system:"

[node name="ESRB" parent="VBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_right = 1008.0

[node name="PEGI" parent="VBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_top = 168.0
margin_right = 1008.0
margin_bottom = 268.0
mapping = [ 0, 3, 7, 12, 16, 18 ]

[node name="Label" parent="VBoxContainer/PEGI" index="0"]
text = "PEGI"
__meta__ = {
"_edit_pinned_properties_": [ "text" ]
}

[node name="Unknown" parent="VBoxContainer/PEGI" index="1"]
texture = ExtResource( 14 )

[node name="1" parent="VBoxContainer/PEGI" index="3"]
texture = ExtResource( 8 )

[node name="2" parent="VBoxContainer/PEGI" index="4"]
texture = ExtResource( 7 )

[node name="3" parent="VBoxContainer/PEGI" index="5"]
texture = ExtResource( 9 )

[node name="4" parent="VBoxContainer/PEGI" index="6"]
texture = ExtResource( 12 )

[node name="5" parent="VBoxContainer/PEGI" index="7"]
texture = ExtResource( 5 )

[node name="CERO" parent="VBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_top = 272.0
margin_right = 1008.0
margin_bottom = 372.0
mapping = [ 0, 3, 12, 15, 17, 18 ]

[node name="Label" parent="VBoxContainer/CERO" index="0"]
text = "CERO"
__meta__ = {
"_edit_pinned_properties_": [ "text" ]
}

[node name="Unknown" parent="VBoxContainer/CERO" index="1"]
texture = ExtResource( 13 )

[node name="1" parent="VBoxContainer/CERO" index="3"]
texture = ExtResource( 6 )

[node name="2" parent="VBoxContainer/CERO" index="4"]
texture = ExtResource( 10 )

[node name="3" parent="VBoxContainer/CERO" index="5"]
texture = ExtResource( 11 )

[node name="4" parent="VBoxContainer/CERO" index="6"]
texture = ExtResource( 4 )

[node name="5" parent="VBoxContainer/CERO" index="7"]
texture = ExtResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 540.0
margin_right = 1008.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 224.0
margin_right = 278.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../HBoxContainer/MinAge")
size_flags_horizontal = 6
text = "Cancel"

[node name="Ok" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 742.0
margin_right = 772.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../HBoxContainer/MinAge")
size_flags_horizontal = 6
text = "Ok"

[connection signal="about_to_show" from="." to="." method="_on_AgeRatingPopup_about_to_show"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MinAge" to="." method="_on_MinAge_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Ok" to="." method="_on_Ok_pressed"]

[editable path="VBoxContainer/PEGI"]
[editable path="VBoxContainer/CERO"]
